Basic Structure Ended

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -97,7 +97,7 @@ spring.jpa.hibernate.ddl-auto = update
 
 ## Postgresql
 #CREATE DATABASE kodluyoruzdb  WITH  OWNER = postgres  ENCODING = 'UTF8'  CONNECTION LIMIT = -1;
-spring.datasource.url=jdbc:postgresql://localhost:5432/questApp
+spring.datasource.url=jdbc:postgresql://localhost:5432/questApp?autocommit=true
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.show-sql=true
