--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,6 +47,10 @@ spring.thymeleaf.enabled=true
 jwt.secret=hakanozdemir
 #jwt.tokenvalidity=2592000
 
+questapp.app.secret=questApp
+questapp.expires.in=3600
+refresh.token.expires.in=604800
+
 
 
 
