--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>questapp</name>
     <description>questapp</description>
+    <packaging>jar</packaging>
     <properties>
         <java.version>17</java.version>
     </properties>
