--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>questapp</name>
     <description>questapp</description>
-    <packaging>jar</packaging>
+<!--    <packaging>jar</packaging>-->
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -22,6 +22,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version> <!-- Kullandığınız Java sürümüne uygun bir sürüm seçin -->
         </dependency>
 
         <!--validation-->
