--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -105,7 +105,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/questApp?autocommit=true
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 ## Postgresql (Docker )
 #spring.datasource.url=jdbc:postgresql://postgresqldb:5432/denemedb
