--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,11 +44,10 @@ spring.thymeleaf.enabled=true
 ########################################################################
 ### Security ##########################################################
 # JWT
-jwt.secret=hakanozdemir
 #jwt.tokenvalidity=2592000
 
-questapp.app.secret=questApp
-questapp.expires.in=3600
+questapp.app.secret=hakanozdemir
+questapp.expires.in=604800
 refresh.token.expires.in=604800
 
 
